--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,8 +13,5 @@
     }
   },
   "remoteUser": "root",
-  "workspaceFolder": "/workspace",
-  "features": {
-    "ghcr.io/devcontainers/features/common-utils:2": {}
-  }
+  "workspaceFolder": "/workspace"
 }
