messgin around with modules

--- a/aoc2015.cabal
+++ b/aoc2015.cabal
@@ -25,7 +25,10 @@ source-repository head
 
 library
   exposed-modules:
-      AOCutil
+      Util.AOC
+      Util.Compute
+      Util.Data
+      Util.Geometry
       Y15D01
       Y15D02
       Y15D19
