--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
-name:                aoc2015
+name:                aoc
 version:             0.1.0.0
-github:              "githubuser/aoc2015"
+github:              "githubuser/advent-of-haskell"
 license:             BSD-3-Clause
-author:              "Author name here"
+author:              "Evgeny Petrovskiy"
 maintainer:          "example@example.com"
-copyright:           "2025 Author name here"
+copyright:           "2025 Evgeny Petrovskiy"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/aoc2015#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/advent-of-haskell#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -39,7 +39,7 @@ library:
   source-dirs: src
 
 executables:
-  aoc2015-exe:
+  aoc-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -47,10 +47,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - aoc2015
+    - aoc
 
 tests:
-  aoc2015-test:
+  aoc-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -58,4 +58,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - aoc2015
+    - aoc
