--- a/stack.yaml
+++ b/stack.yaml
@@ -44,6 +44,8 @@ packages:
 
 extra-deps:
 - split-0.2.5
+- hspec-2.11.16
+
 # Override default flag values for project packages and extra-deps
 # flags: {}
 
